static/css/custom.css
footer a, .content a, .related-posts li a:hover, .content a:hover {
  color: #313131;
  text-decoration: underline;
}

.yt-wrapper {
  position: relative;
  padding-bottom: 56.25%;
  /* 16:9 */
  padding-top: 25px;
  height: 0;
}

.yt-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.post {
  text-align: justify;
}

.posts time {
  min-width: 12ch;
  text-align: right;
}

.post .read-more-link {
  margin-top: .5rem;
}

.post .read-more-link a {
  display: inline-block;
}

.post p {
  margin-top: 0;
  margin-bottom: 1rem;
}

.content h1 a {
  text-decoration: none;
}

.content pre {
  overflow-x: scroll;
  white-space: pre;
}

.content .post img {
  width: 100%;
}

.content .post video {
  border-radius: 5px;
}

.read-more-link a {
  display: block;
  border: none;
  padding: 0;
}

.social-icons a {
  margin-right: 1rem;
}

.categories .category {
  border-radius: 5px;
  padding: 2px;
  font-size: 16px;
  font-weight: bolder;
  margin-right: 0.25rem;
}

.categories .category.sre {
  background: #ffef96;
}

.categories .category.infrastructure {
  background: #50394c;
  color: white;
}

.categories .category.programming {
  background: #f4e1d2;
}

.categories .category.networking {
  background: #d5f4e6;
}

.categories .category.security {
  background: #c94c4c;
  color: white;
}

.categories .category.management {
  background: #80ced6;
  color: white;
}

